# kbopenbib_data

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: address_information.md  authors.md  data_overview.md  document_types.md  funder_information.md  publishers.md  ta.md  ta.qmd  working_with_postgresql.md
docs/fig/: unnamed-chunk-3-1.eps  unnamed-chunk-5-1.eps
examples/: bigquery_notebook.ipynb  document_types.md  funder_information.md  kb_notebook.ipynb  working_with_bigquery.md  working_with_kbopenbib_data.md  working_with_postgresql.md
models/: address_information.py  document_type.py  funding_information.py  publisher.py  transformative_agreements.py
schemas/bigquery/: funding_information.json  publishers.json
schemas/bigquery/adress_information/: kb_a_addr_inst_sec_open_alex.json  kb_a_inst_sec_open_alex.json  kb_inst_lookup.json  kb_inst_name_lookup.json  kb_inst_open_alex.json  kb_inst_trans_open_alex.json  kb_s_addr_inst.json  kb_s_inst_sec_open_alex.json  kb_sector_lookup.json  kb_sector_name_lookup.json  kb_sectors_open_alex.json
schemas/bigquery/publishers/: publishers.json  publishers_relations.json
schemas/bigquery/transformative_agreements/: jct_articles.json  jct_esac.json  jct_institutions.json  jct_journals.json  jct_publishers.json
schemas/postgresql/: adress_information.sql  create_table_document_types.sql  document_types.sql  funding_information.sql  publishers.sql  transformative_agreements.sql
scripts/: export_files.py
tests/: test_export_files.py
